@@ -2,6 +2,8 @@ Version 1.3:
 
 (2012-11-09)
  * Remember position and size.
+ * New option for command line: -lang. Allows to select the language.
+   Example: smtube -lang ja
 
 (2012-10-11)
  * Show a tooltip with the title of the video.
